# dphpc-hs25

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  cuopt_cli.cpp  main.cpp  parse_mps.py  run-highs.sh
cmake/: rapids_config.cmake
libmps_parser/: CMakeLists.txt
prototype/: benchmark_datastructure.py  dual_revised_simplex_solver.py  dualsimplex.py  linsys_solvers.py  pivot_methods.py  test_cuda.py  test_dual_simplex.py  test_dualsimplex.py  test_large_dual_simplex.py  test_mps_suite.py  torch_linalg.py
prototype/prototype2/: test_dualsimplex.py
prototype2/: delaunayLPtest.py  dualsimplex.py  dualsimplex_torch.py  generate_data.py  revised_dualsimplex.py  test_cuda.py  test_dualsimplex.py  test_mps_suite.py
src/: CMakeLists.txt
src/dual_simplex/: CMakeLists.txt  basis_solves.cpp  basis_updates.cpp  basis_updates.hpp  highs_presolve.cpp  highs_presolve.hpp  phase2.cpp  phase2_dual.cu  phase2_dual.cuh  phase2_dual.hpp  problem_analysis.cpp  problem_analysis.hpp  right_looking_lu.cpp  simplex_solver_settings.hpp  solve.cpp  sparse_matrix.cpp  sparse_matrix.cu  sparse_matrix.cuh  sparse_vector.cu  sparse_vector.cuh
src/math_optimization/: CMakeLists.txt
src/utilities/: high_res_timer.hpp  omp_helpers.hpp
